@@ -1509,7 +1509,7 @@ colorchooser > box > grid {
  * Miscellaneous *
  *****************/
 .content-view {
-  background-color: magenta;
+  background-color: #0f0f0f;
 }
 /**********************
  * Window Decorations *
