@@ -2,6 +2,9 @@ Netronic: Changes
 
 —Update 0
 
+——Revision 4, 02/28/2022.
+- `.content-view` background.
+
 ——Revision 3, 02/26/2022.
 - Epiphany webpage tab button styles.
 
